--- a/language/constants.xml
+++ b/language/constants.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- EN-Revision: 1.53 Maintainer: progcom Status: ready -->
+<!-- EN-Revision: 1.54 Maintainer: progcom Status: ready -->
 <!-- CREDITS: fuzzy74 -->
  <chapter xml:id="language.constants" xmlns="http://docbook.org/ns/docbook">
   <title>상수</title>
@@ -67,9 +67,10 @@ define("__FOO__", "something");
     있습니다. 상수가 한번 정의되면, 변경하거나 해제(undefine)할 수 없습니다.
    </simpara>
    <simpara>
-    스칼라 데이터(<type>boolean</type>, <type>integer</type>, 
-    <type>float</type> 과 <type>string</type>)만 상수의 값으로 쓸수있다.
-    <type>resource</type> 상수를 정의하지 마십시오.
+    상수는 스칼라 데이터(<type>boolean</type>, <type>integer</type>,
+    <type>float</type>, <type>string</type>)만 가질 수 있습니다.
+    <type>resource</type>를 상수로 등록할 수 있지만, 피하십시오. 예상할 수
+    없는 결과를 낳을 수 있습니다.
    </simpara>
    <simpara>
     단순히 상수명을 써서 상수값을 얻을 수 있다. 변수와는 달리 
