--- a/language/constants.xml
+++ b/language/constants.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- EN-Revision: 1.54 Maintainer: progcom Status: ready -->
+<!-- EN-Revision: 1.55 Maintainer: progcom Status: ready -->
 <!-- CREDITS: fuzzy74 -->
  <chapter xml:id="language.constants" xmlns="http://docbook.org/ns/docbook">
   <title>상수</title>
@@ -13,8 +13,8 @@
    대문자이다.
   </simpara>
   <para>
-   PHP에서 상수명은 같은 규칙을 따른다. 유효한 상수명은 문자나 밑줄(underscore)
-   로 시작하고 다른 문자나 숫자, 밑줄이 뒤를 따른다. 정규식으로는
+   PHP에서 상수명은 같은 규칙을 따른다. 유효한 상수명은 문자나 밑줄로
+   시작하고 다른 문자나 숫자, 밑줄이 뒤를 따른다. 정규식으로는
    다음처럼 표현할수 있다:
    <literal>[a-zA-Z_\x7f-\xff][a-zA-Z0-9_\x7f-\xff]*</literal>
   </para>
@@ -55,7 +55,7 @@ define("__FOO__", "something");
    &link.superglobals;처럼 상수의 유효범위(scope)는 전역적이다. 유효범위에
    상관없이 스크립트의 어느곳에서도 상수를 참조할수 있다. 상수에 관한
    더 자세한 정보를 위해 
-   <link linkend="language.variables.scope">변수 유효범위(variable scope)</link>
+   <link linkend="language.variables.scope">변수 범위</link>
    매뉴얼 섹션을 참고합니다.
   </simpara>
 
