--- a/language/control-structures.xml
+++ b/language/control-structures.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- EN-Revision: 1.174 Maintainer: progcom Status: ready -->
+<!-- EN-Revision: 1.175 Maintainer: progcom Status: ready -->
 <!-- CREDITS: fuzzy74 -->
 <chapter xml:id="language.control-structures" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title>제어 구조</title>
@@ -33,6 +33,7 @@
  &language.control-structures.include;
  &language.control-structures.require-once;
  &language.control-structures.include-once;
+ &language.control-structures.goto;
 
 </chapter>
 
