--- a/language/operators.xml
+++ b/language/operators.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- EN-Revision: 1.128 Maintainer: progcom Status: ready -->
+<!-- EN-Revision: 1.129 Maintainer: progcom Status: ready -->
  <chapter xml:id="language.operators" xmlns="http://docbook.org/ns/docbook">
   <title>연산자</title>
   <simpara>
@@ -672,6 +672,12 @@ if (empty($_POST['action'])) {
      <replaceable>expr2</replaceable>로 평가되고,
      <replaceable>expr1</replaceable>이 &false;이면
      <replaceable>expr3</replaceable>로 평가됩니다.
+    </para>
+    <para>
+     PHP 5.3부터, 삼항 연산자의 중간 부분을 비울 수 있습니다. 표현식
+     <literal>expr1 ?: expr3</literal>은 <replaceable>expr1</replaceable>이
+     &true;이면 <replaceable>expr1</replaceable>, 아니면
+     <replaceable>expr3</replaceable>를 반환합니다.
     </para>
     <note>
      <simpara>
