--- a/language/namespaces.xml
+++ b/language/namespaces.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- $Revision: 288721 $ -->
+<!-- EN-Revision: 288721 Maintainer: acidd15 Status: ready -->
 <chapter xml:id="language.namespaces" xmlns="http://docbook.org/ns/docbook"
  version="1.1">
- <title>Namespaces</title>
+ <title>네임스페이즈</title>
 
  <sect1 xml:id="language.namespaces.rationale">
   <title>Namespaces overview</title>
