--- a/language/namespaces.xml
+++ b/language/namespaces.xml
@@ -2,7 +2,7 @@
 <!-- EN-Revision: 288721 Maintainer: acidd15 Status: ready -->
 <chapter xml:id="language.namespaces" xmlns="http://docbook.org/ns/docbook"
  version="1.1">
- <title>네임스페이즈</title>
+ <title>네임스페이스</title>
 
  <sect1 xml:id="language.namespaces.rationale">
   <title>Namespaces overview</title>
