--- a/language/oop5.xml
+++ b/language/oop5.xml
@@ -13,12 +13,14 @@
   </sect1>
 
   &language.oop5.basic;
+  &language.oop5.properties;
+  &language.oop5.constants;
   &language.oop5.autoload;
   &language.oop5.decon;
   &language.oop5.visibility;
+  &language.oop5.inheritance;
   &language.oop5.paamayim-nekudotayim;
   &language.oop5.static;
-  &language.oop5.constants;
   &language.oop5.abstract;
   &language.oop5.interfaces;
   &language.oop5.overloading;
@@ -28,10 +30,11 @@
   &language.oop5.final;
   &language.oop5.cloning;
   &language.oop5.object-comparison;
-  &language.oop5.reflection;
   &language.oop5.typehinting;
   &language.oop5.late-static-bindings;
   &language.oop5.references;
+  &language.oop5.serialization;
+  &language.oop5.changelog;
 </chapter>
  
 <!-- Keep this comment at the end of the file
