--- a/language/oop5/serialization.xml
+++ b/language/oop5/serialization.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 297557 $ -->
+<!-- $Revision$ -->
  <sect1 xml:id="language.oop5.serialization" xmlns="http://docbook.org/ns/docbook">
   <title>Object Serialization</title>
   <title>Serializing objects - objects in sessions</title>
