fix segfault on build
git-svn-id: https://svn.php.net/repository/phpdoc/kr/trunk@331475 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5.xml
+++ b/language/oop5.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- EN-Revision: 313564 Maintainer: progcom Status: ready -->
+<!-- EN-Revision: 325666 Maintainer: progcom Status: ready -->
  <chapter xml:id="language.oop5" xmlns="http://docbook.org/ns/docbook">
   <title>클래스와 객체</title>
 
   <sect1  xml:id="oop5.intro">
    <title>소개</title>
    <para>
-    PHP 5는 좋은 성능과 많은 기능을 가진 새로운 객체 모델이 작성되었습니다.
+    PHP 5에서 좋은 성능과 많은 기능을 가진 새로운 객체 모델이 작성되었습니다.
     이는 PHP 4에서 큰 변경점입니다. PHP 5는 완전한 객체 모델을 가집니다.
    </para>
    <para>
     PHP 5는
     <link linkend="language.oop5.visibility">visibility</link>, 
-    <link linkend="language.oop5.abstract">추상화</link>,
-    <link linkend="language.oop5.final">final</link> 클래스와 메소드를
-    포함하여,
+    <link linkend="language.oop5.abstract">abstract</link>,
+    <link linkend="language.oop5.final">final</link> 클래스와 메소드와 함께
     <link linkend="language.oop5.magic">magic methods</link>, 
     <link linkend="language.oop5.interfaces">인터페이스</link>, 
     <link linkend="language.oop5.cloning">복제</link>
-    <link linkend="language.oop5.typehinting">typehinting</link> 등의 기능을
+    <link linkend="language.oop5.typehinting">typehinting</link>의 기능을
     가지고 있습니다.
    </para>
    <para>
@@ -44,7 +43,6 @@
   &language.oop5.traits;
   &language.oop5.overloading;
   &language.oop5.iterations;
-  &language.oop5.patterns;
   &language.oop5.magic;
   &language.oop5.final;
   &language.oop5.cloning;
